--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,7 @@
+//tailwind
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 // Fonts
 @import url('https://fonts.bunny.net/css?family=Nunito');
 
@@ -5,4 +9,6 @@
 @import 'variables';
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+// @import 'bootstrap/scss/bootstrap';
+
+
